--- a/STT and TTS/STT and TTS/Base.lproj/Main.storyboard
+++ b/STT and TTS/STT and TTS/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Language" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0J2-mk-9st">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="en-US" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0J2-mk-9st">
                                 <rect key="frame" x="20" y="170" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="sNd-03-yJz"/>
